--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "filepond": "^4.30.4",
+        "filepond-plugin-image-preview": "^4.6.11"
     }
 }
