update: .env.example

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 YOUR_GOOGLE_CLIENT_ID=
 YOUR_GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URL=
+
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+FACEBOOK_REDIRECT_URL=
